для всех таблиц добавил 3 строки с элементом сортировки там где нужно, убрал лишние таблицы

--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -55,8 +55,7 @@
 									</th>
 									<th>Nom de l'équipement<button class="btn btn-link p-0 border-0" id="sortByName"
 											style="text-decoration: none; color: black;"><i class="fas fa-sort"></i></button></th>
-									<th>Catégorie<button class="btn btn-link p-0 border-0" id="sortByCategory"
-											style="text-decoration: none; color: black;"><i class="fas fa-sort"></i></button></th>
+									<th>Catégorie</th>
 									<th>Description</th>
 									<th>Statut<button class="btn btn-link p-0 border-0" id="sortByStatus"
 											style="text-decoration: none; color: black;"><i class="fas fa-sort"></i></button></th>
@@ -69,50 +68,155 @@
 								<tr data-equipment-id="1" class="">
 									<td>1</td>
 									<td>
-											<span class="equipment-name view-mode">Ordinateur portable</span>
-											<input type="text" class="form-control d-none edit-mode" name="equipment-name" value="Ordinateur portable">
+										<span class="equipment-name view-mode">Ordinateur portable</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-name"
+											value="Ordinateur portable">
 									</td>
 									<td>
-											<span class="equipment-category view-mode">Informatique</span>
-											<select class="form-select d-none edit-mode" name="equipment-category">
-													<option value="Informatique">Ordinateur portable</option>
-													<option value="Informatique">Ecran d'ordinateur</option>
-													<option value="Informatique">Smartphone</option>
-													<option value="Informatique">Accessoires</option>
-													<option value="Informatique">Tablette</option>
-													<option value="Autre catégorie">Casque VR</option>
-											</select>
+										<span class="equipment-category view-mode">Informatique</span>
+										<select class="form-select d-none edit-mode" name="equipment-category">
+											<option value="Informatique">Ordinateur portable</option>
+											<option value="Informatique">Ecran d'ordinateur</option>
+											<option value="Informatique">Smartphone</option>
+											<option value="Informatique">Accessoires</option>
+											<option value="Informatique">Tablette</option>
+											<option value="Autre catégorie">Casque VR</option>
+										</select>
 									</td>
 									<td>
-											<span class="equipment-description view-mode">Haute performance pour le gaming</span>
-											<textarea class="form-control d-none edit-mode" name="equipment-description"></textarea>
+										<span class="equipment-description view-mode">Haute performance pour le gaming</span>
+										<textarea class="form-control d-none edit-mode" name="equipment-description"></textarea>
 									</td>
 									<td>
-											<span class="equipment-availability view-mode">Disponible</span>
-											<input type="text" class="form-control d-none edit-mode" name="equipment-availability" value="Disponible">
-											<select class="form-select edit-mode d-none" name="equipment-availability">
-													<option value="Disponible">Disponible</option>
-													<option value="Non disponible">Non disponible</option>
-											</select>
+										<span class="equipment-availability view-mode">Disponible</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-availability"
+											value="Disponible">
+										<select class="form-select edit-mode d-none" name="equipment-availability">
+											<option value="Disponible">Disponible</option>
+											<option value="Non disponible">Non disponible</option>
+										</select>
 									</td>
 									<td>
-											<div class="dropdown">
-													<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-															Choisir une action
-													</button>
-													<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-															<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
-															<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
-															<li><a class="dropdown-item" href="#">Voir les détails</a></li>
-															<li><a class="dropdown-item" href="#">Réserver</a></li>
-															<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
-																			actions</a></li>
-															<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
-															<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a href="#">Восстановить</a></li>
-													</ul>
-											</div>
+										<div class="dropdown">
+											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+												data-bs-toggle="dropdown" aria-expanded="false">
+												Choisir une action
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
+												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
+												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
+												<li><a class="dropdown-item" href="#">Réserver</a></li>
+												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
+														actions</a></li>
+												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+												<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a href="#">Rétablir</a>
+												</li>
+											</ul>
+										</div>
 									</td>
-							</tr>
+								</tr>
+								<tr data-equipment-id="2" class="">
+									<td>2</td>
+									<td>
+										<span class="equipment-name view-mode">Imprimante 3D</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-name"
+											value="Imprimante 3D">
+									</td>
+									<td>
+										<span class="equipment-category view-mode">Technologie</span>
+										<select class="form-select d-none edit-mode" name="equipment-category">
+											<option value="Technologie">Imprimante 3D</option>
+											<option value="Technologie">Drone</option>
+											<option value="Informatique">Ordinateur portable</option>
+											<option value="Informatique">Smartphone</option>
+											<option value="Informatique">Tablette</option>
+										</select>
+									</td>
+									<td>
+										<span class="equipment-description view-mode">Modèle industriel avancé</span>
+										<textarea class="form-control d-none edit-mode" name="equipment-description"></textarea>
+									</td>
+									<td>
+										<span class="equipment-availability view-mode">Non disponible</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-availability"
+											value="Non disponible">
+										<select class="form-select edit-mode d-none" name="equipment-availability">
+											<option value="Disponible">Disponible</option>
+											<option value="Non disponible">Non disponible</option>
+										</select>
+									</td>
+									<td>
+										<div class="dropdown">
+											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+												data-bs-toggle="dropdown" aria-expanded="false">
+												Choisir une action
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
+												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
+												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
+												<li><a class="dropdown-item" href="#">Réserver</a></li>
+												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-2">Journal des
+														actions</a></li>
+												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+												<li class="dropdown-item d-none restore-action" data-equipment-id="2"><a href="#">Rétablir</a>
+												</li>
+											</ul>
+										</div>
+									</td>
+								</tr>
+								<tr data-equipment-id="3" class="">
+									<td>3</td>
+									<td>
+										<span class="equipment-name view-mode">Scanner de documents</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-name"
+											value="Scanner de documents">
+									</td>
+									<td>
+										<span class="equipment-category view-mode">Bureau</span>
+										<select class="form-select d-none edit-mode" name="equipment-category">
+											<option value="Bureau">Scanner de documents</option>
+											<option value="Bureau">Fax</option>
+											<option value="Bureau">Photocopieur</option>
+											<option value="Informatique">Ordinateur portable</option>
+											<option value="Informatique">Ecran d'ordinateur</option>
+										</select>
+									</td>
+									<td>
+										<span class="equipment-description view-mode">Haute résolution et rapide</span>
+										<textarea class="form-control d-none edit-mode" name="equipment-description"></textarea>
+									</td>
+									<td>
+										<span class="equipment-availability view-mode">Disponible</span>
+										<input type="text" class="form-control d-none edit-mode" name="equipment-availability"
+											value="Disponible">
+										<select class="form-select edit-mode d-none" name="equipment-availability">
+											<option value="Disponible">Disponible</option>
+											<option value="Non disponible">Non disponible</option>
+										</select>
+									</td>
+									<td>
+										<div class="dropdown">
+											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton3"
+												data-bs-toggle="dropdown" aria-expanded="false">
+												Choisir une action
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
+												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
+												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
+												<li><a class="dropdown-item" href="#">Réserver</a></li>
+												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-3">Journal des
+														actions</a></li>
+												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+												<li class="dropdown-item d-none restore-action" data-equipment-id="3"><a href="#">Rétablir</a>
+												</li>
+											</ul>
+										</div>
+									</td>
+								</tr>
+
 
 
 								<!-- Скрытая строка для журнала действий -->
