--- a/germax-frontend/src/templates/components/content-page-rental-manager-loans-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-rental-manager-loans-order-new-equipment/index.html
@@ -1,4 +1,5 @@
-<div class="tab-pane fade show active" id="commandes-equipement" role="tabpanel" aria-labelledby="commandes-equipement-link">
+<div class="tab-pane fade show active" id="commandes-equipement" role="tabpanel"
+	aria-labelledby="commandes-equipement-link">
 	<h2>Commandes d'équipement</h2>
 
 	<!-- Новая форма для заказа оборудования -->
@@ -8,8 +9,7 @@
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label for="equipmentName">Nom de l'équipement</label>
-					<input type="text" class="form-control" id="equipmentName"
-						placeholder="Entrez le nom de l'équipement">
+					<input type="text" class="form-control" id="equipmentName" placeholder="Entrez le nom de l'équipement">
 				</div>
 				<div class="form-group col-md-4">
 					<label for="quantity">Quantité</label>
@@ -27,20 +27,104 @@
 		<table class="table">
 			<thead>
 				<tr>
-					<th>Numéro de Commande</th>
+					<th>Numéro de Commande <button class="btn btn-link p-0 border-0 sortButton"
+							title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
 					<th>Nom de l'Équipement</th>
-					<th>Quantité</th>
-					<th>Date de la Commande</th>
-					<th>Statut de Livraison</th>
+					<th>Quantité <button class="btn btn-link p-0 border-0 sortButton" title="Trier par Quantité"><i
+								class="fas fa-sort"></i></button></th>
+					<th>Date de la Commande <button class="btn btn-link p-0 border-0 sortButton"
+							title="Trier par Date de la Commande"><i class="fas fa-sort"></i></button></th>
+					<th>Statut de Livraison <button class="btn btn-link p-0 border-0 sortButton"
+							title="Trier par Statut de Livraison"><i class="fas fa-sort"></i></button></th>
 					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
-				<!-- Les lignes de commande seront générées dynamiquement ici -->
+				<tr>
+					<td>1001</td>
+					<td>Ordinateur Portable Avancé</td>
+					<td>10</td>
+					<td>01/04/2024</td>
+					<td>En cours</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+								<li><a class="dropdown-item confirm-delivrance" href="#">Confirmer la réception</a></li>
+								<li>
+									<a class="dropdown-item annulate-booking-action" href="#">Annuler la commande</a>
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme livré</a>
+								</li>
+								<li>
+									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir les détails</a>
+								</li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>1002</td>
+					<td>Scanner 3D Pro</td>
+					<td>5</td>
+					<td>05/04/2024</td>
+					<td>Livrée</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+								<li><a class="dropdown-item confirm-delivrance" href="#">Confirmer la réception</a></li>
+								<li>
+									<a class="dropdown-item annulate-booking-action" href="#">Annuler la commande</a>
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme livré</a>
+								</li>
+								<li>
+									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir les détails</a>
+								</li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>1003</td>
+					<td>Drones de Surveillance</td>
+					<td>20</td>
+					<td>10/04/2024</td>
+					<td>En préparation</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+								<li><a class="dropdown-item confirm-delivrance" href="#">Confirmer la réception</a></li>
+								<li>
+									<a class="dropdown-item annulate-booking-action" href="#">Annuler la commande</a>
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme livré</a>
+								</li>
+								<li>
+									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir les détails</a>
+								</li>
+							</ul>
+						</div>
+					</td>
+				</tr>
 			</tbody>
 		</table>
-	</div>
-	<div class="commande-actions">
-		<button type="button" class="btn btn-success">Marquer comme livré</button>
 	</div>
 </div>
