--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-awaiting-repair/index.html
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-awaiting-repair/index.html
@@ -1,20 +1,85 @@
 <div class="tab-pane fade show active" id="materiels-attente-maintenance" role="tabpanel"
-		aria-labelledby="materiels-attente-maintenance-link">
-		<h2>Matériel en attente de maintenance</h2>
-		<div class="table-responsive">
-			<table class="table">
-				<thead>
-					<tr>
-						<th>ID Matériel</th>
-						<th>Description</th>
-						<th>Date de Signalement</th>
-						<th>Problème Signalé</th>
-						<th>Actions</th>
-					</tr>
-				</thead>
-				<tbody>
-					<!-- Les lignes de tableau seront générées dynamiquement ici -->
-				</tbody>
-			</table>
-		</div>
+	aria-labelledby="materiels-attente-maintenance-link">
+	<h2>Matériel en attente de maintenance</h2>
+	<div class="table-responsive">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>ID<button class="btn btn-link p-0 border-0" id="sortById"><i class="fas fa-sort"></i></button>
+					</th>
+					<th>Description</th>
+					<th>Date de Signalement <button class="btn btn-link p-0 border-0 sortButton"
+							title="Trier par Date de Signalement"><i class="fas fa-sort"></i></button></th>
+					<th>Date de Résolution <button class="btn btn-link p-0 border-0 sortButton"
+							title="Trier par Date de Résolution"><i class="fas fa-sort"></i></button></th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>001</td>
+					<td>Panne de serveur</td>
+					<td>01/04/2024</td>
+					<td>19/04/2024</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+								<li><a class="dropdown-item mark-as-resolved-action" href="#">Marquer comme résolu</a></li>
+								<li><a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir le problème signalé</a></li>
+								<li><a class="dropdown-item write-to-manager-action" href="#" data-bs-toggle="modal"
+										data-bs-target="#communication-manager">Contacter le manager</a></li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>002</td>
+					<td>Erreur logiciel critique</td>
+					<td>02/04/2024</td>
+					<td>11/04/2024</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+								<li><a class="dropdown-item mark-as-resolved-action" href="#">Marquer comme résolu</a></li>
+								<li><a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir le problème signalé</a></li>
+								<li><a class="dropdown-item write-to-manager-action" href="#" data-bs-toggle="modal"
+										data-bs-target="#communication-manager">Contacter le manager</a></li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>003</td>
+					<td>Defaillance du réseau interne</td>
+					<td>03/04/2024</td>
+					<td>09/04/2024</td>
+					<td>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton3"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Choisir une action
+							</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+								<li><a class="dropdown-item mark-as-resolved-action" href="#">Marquer comme résolu</a></li>
+								<li><a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsModal">Voir le problème signalé</a></li>
+								<li><a class="dropdown-item write-to-manager-action" href="#" data-bs-toggle="modal"
+										data-bs-target="#communication-manager">Contacter le manager</a></li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
+</div>
