--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-orders/index.css
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-orders/index.css
@@ -1,2 +1,2 @@
-
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
